[gd_scene load_steps=3 format=2]

[ext_resource path="res://creatures/player/abilities/stunbomb_action.gd" type="Script" id=1]
[ext_resource path="res://creatures/player/abilities/stunbomb_projectile.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BombArea" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="impacted" from="BombArea" to="." method="_on_BombArea_impacted"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
